fixed responsive image issue on safari browsers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3808,7 +3808,8 @@ a:hover {
 }
 
 .mt {
-    margin-top: 80px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 /*=============================
